examples/staging/istio/php-istio.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: nm-php-apache
spec:
  selector:
    app: nm-php-apache
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    sidecar.istio.io/status: injected-version-root@881c9704f303-0.2.9-48ce32e6909d120a8ecee58b6b7a84094da36b7c
  creationTimestamp: null
  labels:
    deployment: nm-php-apache
  name: nm-php-apache
spec:
  replicas: 2
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: injected-version-root@881c9704f303-0.2.9-48ce32e6909d120a8ecee58b6b7a84094da36b7c
      creationTimestamp: null
      labels:
        app: nm-php-apache
    spec:
      containers:
      - image: gcr.io/nmiu-play/nm-php-apache:latest
        name: nm-php-apache
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources: {}
      - args:
        - proxy
        - sidecar
        - -v
        - "2"
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - nm-php-apache
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.istio-system:8080
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - zipkin.istio-system:9411
        - --connectTimeout
        - 10s
        - --statsdUdpAddress
        - istio-mixer.istio-system:9125
        - --proxyAdminPort
        - "15000"
        image: docker.io/istio/proxy_debug:0.2.9
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources: {}
        securityContext:
          privileged: true
          readOnlyRootFilesystem: false
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
          sizeLimit: "0"
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nm-php-apache
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  backend:
    serviceName: nm-php-apache
    servicePort: 80
---
