examples/staging/istio/php.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: nm-php-apache
spec:
  selector:
    app: nm-php-apache
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nm-php-apache
  labels:
    deployment: nm-php-apache
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nm-php-apache
    spec:
      containers:
        - name: nm-php-apache
          image: gcr.io/nmiu-play/nm-php-apache:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nm-php-apache
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  backend:
    serviceName: nm-php-apache
    servicePort: 80
